# cpp-ffmpeg-record

./: CMakeLists.txt  LICENSE  README.md  decoding_video.c  main.cpp  main2.cpp
